# drjit-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.cpp  api.h  changes.txt  drjit-core-config.cmake  eval.cpp  eval.h  hash.cpp  hash.h  jit.cpp  jit.h  log.cpp  log.h  main.cpp  malloc.cpp  malloc.h  ssa.cpp  ssa.h  state.h
cmake/: bin2c.cmake  embed_metal_kernels.cmake
include/drjit-core/: amd.h  array.h  containers.h  gl_interop.h  half.h  hash.h  intrin.h  jit.h  macros.h  metal.h  nanostl.h  optix.h  python.h  state.h  texture.h  traits.h
include/enoki/: cuda.h  jit.h  jitvar.h  llvm.h  traits.h
include/enoki-jit/: array.h  containers.h  cuda.h  jit.h  llvm.h  optix.h  state.h  texture.h  thread.h  traits.h  util.h
kernels/: Makefile  compress.cuh  generate.c  kernels.c  kernels.cu  kernels.dict  kernels.h  kernels_50.ptx  kernels_70.ptx  llvm_kernels.ll  llvm_kernels.py  llvm_kernels_7.ll  llvm_kernels_9.ll  misc.cuh  mkperm.cuh  perf.cu  reduce.cuh  scan.cuh  scatter_add.cpp
ptx/: Makefile  generate.c  kernels.cu  misc.cuh  mkperm.cuh  reduce.cuh  scan.cuh
resources/: CMakeLists.txt  Makefile  block_prefix_reduce.cuh  block_reduce.cuh  block_sum.cuh  common.h  compress.cuh  embed_metal_kernels.cmake  gemm.cuh  kernels.c  kernels.cu  kernels.h  kernels_50.lz4  kernels_50.ptx  kernels_70.lz4  kernels_70.ptx  kernels_75.lz4  kernels_dict.lz4  metal_device_lib.metal  metal_kernels.metal  metal_kernels.metallib  misc.cuh  mkperm.cuh  pack.c  perf.cu  perf_reduce.cu  prefix_sum.cuh  reduce.cuh  reduce_2.cuh  scan.cuh
src/: alloc.h  amd_api.h  amd_core.cpp  amd_eval.cpp  amd_gemm.h  amd_misc.h  amd_reduce.h  amd_rt.cpp  amd_rt.h  amd_ts.cpp  amd_ts.h  api.cpp  array.cpp  array.h  backends.h  call.cpp  call.h  common.h  cond.cpp  cond.h  coop_vec.cpp  coop_vec.h  core.cpp  core.h  cuda.cpp  cuda.h  cuda_api.cpp  cuda_api.h  cuda_array.cpp  cuda_array.h  cuda_core.cpp  cuda_eval.cpp  cuda_eval.h  cuda_green.cpp  cuda_green.h  cuda_init.cpp  cuda_internal.cpp  cuda_internal.h  cuda_packet.cpp  cuda_packet.h  (+131 more)
tests/: 01_cuda_basics.cpp  CMakeLists.txt  array.cpp  basics.cpp  ekloop.h  graphviz.cpp  half.cpp  loop.cpp  mem.cpp  metal_compress_mkperm_test.cpp  metal_gemm_test.cpp  metal_kernel.cpp  metal_prefix_test.cpp  metal_reduce_test.cpp  metal_rt_test.cpp  metal_smoke.cpp  metal_triangle.mm  metal_vcall_test.cpp  microbenchmark.cpp  microbenchmark.py  optix_stubs.cpp  optix_stubs.h  optix_triangle.cpp  record.cpp  reductions.cpp  test.cpp  test.h  traits.h  triangle.cpp  vcall.cpp  vcall_old.cpp
tests/01_cuda_basics_data/: test01_creation_destruction.ref  test02_eval_scalar.ref  test02_fill_and_print.ref
tests/optix/: optix_api.cpp  optix_api.h  triangle.cpp
tests/out_01_cuda_basics/: test03_eval_scalar.ref  test04_eval_scalar_csa.ref  test05_argument_out.ref  test06_argument_inout.ref
tests/out_basics/: test01_creation_destruction_cuda.ref  test01_creation_destruction_llvm.ref  test02_fill_and_print_cuda.ref  test02_fill_and_print_llvm.ref  test03_eval_scalar_cuda.ref  test03_eval_scalar_llvm.ref  test04_eval_scalar_csa_cuda.ref  test04_eval_scalar_csa_llvm.ref  test05_argument_out_cuda.ref  test05_argument_out_llvm.ref  test06_argument_inout_cuda.ref  test06_argument_inout_llvm.ref  test07_arange_cuda.ref  test07_arange_llvm.ref  test08_conv_cuda.ref  test08_conv_llvm.ref  test09_fma_cuda.ref  test09_fma_llvm.ref  test10_sqrt_cuda.ref  test10_sqrt_llvm.ref  test11_mask.ref  test11_mask_cuda.ref  test11_mask_llvm.ref  test12_binop.ref  test12_binop_cuda.ref  test12_binop_llvm.ref  test14_scatter_gather_cuda.ref  test14_scatter_gather_llvm.ref  test15_round_cuda.ref  test15_round_llvm.ref  test16_pointer_registry_llvm.ref  test17_scatter_gather_mask_cuda.ref  test17_scatter_gather_mask_llvm.ref  test18_mask_propagation_cuda.ref  test18_mask_propagation_llvm.ref  test19_register_ptr_cuda.ref  test19_register_ptr_llvm.ref  test20_reinterpret_cast_cuda.ref  test20_reinterpret_cast_llvm.ref  test21_shifts_cuda.ref  (+26 more)
tests/out_basics_old/: test03_eval_scalar_llvm.ref  test04_eval_scalar_csa_cuda.ref  test05_argument_out_llvm.ref  test10_sqrt_cuda.ref  test11_mask_cuda.ref  test11_mask_llvm.ref  test12_binop_cuda.ref  test12_binop_llvm.ref  test14_scatter_gather_cuda.ref  test15_round_cuda.ref  test15_round_llvm.ref  test18_mask_propagation_llvm.ref  test22_and_or_mask_llvm.ref  test24_bitop_cuda.ref  test24_bitop_llvm.ref  test27_avx512_intrinsics_round2int_cuda.ref  test28_scatter_add_cuda.ref  test30_scatter_ordering_cuda.ref  test30_scatter_ordering_llvm.ref  test31_vcall_cuda.ref  test33_minmax_int_cuda.ref  test34_resize_llvm.ref  test35_pointer_registry_attribute_llvm.ref
tests/out_reductions/: test01_all_any_cuda.ref  test01_all_any_llvm.ref  test02_scan_cuda.ref  test02_scan_llvm.ref  test03_compress_cuda.ref  test03_compress_llvm.ref  test03_mkperm_cuda.ref  test03_mkperm_llvm.ref  test04_mkperm_cuda.ref  test04_mkperm_llvm.ref  test05_block_ops_cuda.ref  test05_block_ops_llvm.ref  test06_parallel_scatter_add_llvm.ref
tests/out_vcall/: test01_symbolic_vcall_cuda.ref  test01_symbolic_vcall_optix_cuda.ref
tests/output/01_cuda_basics/: test01_creation_destruction.ref
